--- a/index.html
+++ b/index.html
@@ -10,16 +10,32 @@
     <link rel="icon" href="">
     <!--CSS File-->
     <link rel="stylesheet" href="/public/css/style.css" type="text/css">
+    <!--Google Font-->
+    <!--Nunito Sans-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap" rel="stylesheet">
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/a1618bce8f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
         <nav class="header__nav">
             <h1 class="header__nav__title">Where in the world?</h1>
             <div class="header__nav__dark-mode">
+                <i class="fa-solid fa-moon header__nav__dark-mode__icon"></i>
                 <p class="header__nav__dark-mode__text">Dark mode</p>
             </div>
         </nav>
     </header>
+    <main class="main">
+        <nav class="main__nav">
+            <div class="main__nav__search-bar">
+                <i class="fa-solid fa-magnifying-glass main__nav__search-bar__icon"></i>
+                <input type="text" placeholder="Search for a country..." class="main__nav__search-bar__inpt">
+            </div>
+        </nav>
+    </main>
     <!--JS File-->
     <script src="/src/js/script.js" type="text/javascript"></script>
 </body>
