--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
                 </div>
             </div>
         </nav>
+        <div class="main__flags-container"></div>
     </main>
     <!--JS File-->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="/src/js/script.js" type="text/javascript"></script>
     <script src="/src/js/select.js" type="text/javascript"></script>
 </body>
