--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Page Title-->
-    <title></title>
+    <title>Frontend Mentor</title>
     <!--Page Logo-->
-    <link rel="icon" href="">
+    <link rel="icon" href="/public/img/Logo.png">
     <!--CSS File-->
     <link rel="stylesheet" href="/public/css/style.css" type="text/css">
     <!--Google Font-->
@@ -50,6 +50,12 @@
         </nav>
         <div class="main__flags-container"></div>
     </main>
+    <footer class="footer">
+        <div class="footer__information-container">
+            <p class="footer__information-container__author">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="https://github.com/Tux3er-Isma" target="_blank">Tux3er</a><span></span></p>
+        </div>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/35/Tux.svg/248px-Tux.svg.png" alt="Tux3er" class="footer__tux3er">
+    </footer>
     <!--JS File-->
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="/src/js/script.js" type="text/javascript"></script>
